Jan19: add image

--- a/journal/201901.md
+++ b/journal/201901.md
@@ -1,5 +1,7 @@
 # Decred Journal – January 2019
 
+![abstract art](../img/journal-201901-384.jpg "Out of the abstract to more objective future")
+
 Decred kicked off 2019 with a month that saw major software releases and significant developments in other parts of the project.
 
 A new version of node and wallet software (v1.4.0) was [released](https://github.com/decred/decred-binaries/releases/tag/v1.4.0) which will initiate a consensus rules vote (among other things), so timely upgrading is advised.
@@ -333,4 +335,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, davecgh, degeri, Dustorf, guang, Haon, jholdstock, liz_bagot, lukebp, matheusd, richardred, zubairzia0.
+Credits (alphabetical order): bee, davecgh, degeri, Dustorf, guang, Haon, jholdstock, liz_bagot, lukebp, matheusd, richardred, saender, zubairzia0.
