--- a/journal/201902.md
+++ b/journal/201902.md
@@ -95,7 +95,7 @@ Hashrate: {month}'s hashrate opened at ~{} Ph/s and closed ~{} Ph/s, bottoming a
 
 Staking: 30-day average ticket price was {} DCR (+{}) per dcrstats.com. The price varied between {}-{} DCR. Locked amount was {}-{} million DCR, which corresponded to {}-{}% of the available supply. {all time high stake %?}
 
-1,265 tickets purchased in a single interval on Feb 11 sent the price to 117.8 in 4 subsequent increases. {update numbers}
+1,265 tickets purchased in a single interval on Feb 11 sent the price to 119.4 in 7 subsequent increases. This was followed by a streak of 9 price reductions down to 100.9 DCR. {update numbers}
 
 Nodes: As of {date} there were {} public listening nodes and {} normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: {}.
 
@@ -112,6 +112,7 @@ Nodes: As of {date} there were {} public listening nodes and {} normal nodes per
 Exchange integrations:
 
 * https://medium.com/lykke/lykke-exchange-lists-decred-cryptocurrency-1ae9e3cf9c6a
+  * https://twitter.com/lykke/status/1095352586545319937
 * Vertbase DCR/USD {where it is based, is USD real? first real fiat pair?}
 
 {OTC desks}
