--- a/journal/201902.md
+++ b/journal/201902.md
@@ -35,6 +35,7 @@ https://explorer.dcrdata.org/block/1
 [Politeia](https://github.com/decred/politeia):
 
 * Epic cache layer work was [merged](https://github.com/decred/politeia/pull/660)! Thanks @lukebp and all reviewers/testers. This paves the way for a lot of site performance improvements.
+* {dcrtime fsck}
 
 * Work started to scale www database using CockroachDB https://github.com/decred/politeia/pull/689
 
@@ -101,7 +102,13 @@ Ditto contractors https://github.com/decred/dcrweb/issues/562
 
 In {month} the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {} DCR and spent {} DCR. Using February's daily average DCR/USD rate of ${}, this is ${}K received and ${}K spent. As these payments were for work completed in January, it is also informative to consider them in the context of the January average daily rate of $17.05 - in which case the USD received/spent figures are ${}K/${}K.
 
-[Marketing 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal was published on Feb 18 and extensively discussed.
+[Marketing 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal was published on Feb 18 and extensively discussed. Voting started.
+
+Events voting started.
+
+Wallet tutorial pre-proposal by Cryptocurrency.Market https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154941338230201BHqFC:decred.org {links to reddit and gist, author did multiple iterations based on feedback}. voting started.
+
+Community website by @karamble published, voting started https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83
 
 Discussions about amending Decred Constitution https://github.com/xaur/decred-issues/issues/107 and ratifying the new version via Politeia vote, the goal of this iteration is to remove outdated/irrelevant parts, rather than a full rewrite.
 
@@ -112,8 +119,6 @@ Discussions about amending Decred Constitution https://github.com/xaur/decred-is
 {DEX proposal discussion}
 
 ATM Latest version of the pre-proposal is in [this gist](https://gist.github.com/oregonisaac/c25bac8e0ee9d4e99997b230885296eb).
-
-Wallet tutorial pre-proposal by Cryptocurrency.Market https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154941338230201BHqFC:decred.org {links to reddit and gist, author did multiple iterations based on feedback}
 
 Experimental Twitter account you can subscribe to for key Politeia activity https://twitter.com/pi_crumbs {issue}, for now operated manually by @richardred
 
