--- a/journal/201902.md
+++ b/journal/201902.md
@@ -35,9 +35,12 @@ https://explorer.dcrdata.org/block/1
 [Politeia](https://github.com/decred/politeia):
 
 * Epic cache layer work was [merged](https://github.com/decred/politeia/pull/660)! Thanks @lukebp and all reviewers/testers. This paves the way for a lot of site performance improvements.
-* {dcrtime fsck}
+* CLI tool improvements https://github.com/decred/politeia/pull/707
+* fsck (file system verification tool) for dcrtime https://github.com/decred/dcrtime/pull/46
 
 * Work started to scale www database using CockroachDB https://github.com/decred/politeia/pull/689
+
+A decision [was made](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$15507680085008gMbtf:decred.org) to move the code for contractor management system in politeia and politeiagui repositories to avoid the overhead of maintaining two codebase forks and keeping them in sync.
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
@@ -56,6 +59,8 @@ Trezor: {}
 * exchange rate monitoring https://github.com/decred/dcrdata/pull/951
 * mempool page reworked https://github.com/decred/dcrdata/pull/982
 * endpoints to get raw blocks https://github.com/decred/dcrdata/pull/1032 and raw headers https://github.com/decred/dcrdata/pull/1035
+* added cache package https://github.com/decred/dcrdata/pull/1051
+* fiat conversions for supply, treasury and ticket price https://github.com/decred/dcrdata/pull/1049
 
 WIP:
 
@@ -81,6 +86,8 @@ Other:
 * Trivia: did you know that Decred heavily [discourages](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15497657664963CvzUr:decred.org) creation of dust outputs?
 * PoC UI for atomic swaps made a few steps https://github.com/xaur/decred-issues/issues/8
 * QTUM support merged to atomicswap https://github.com/decred/atomicswap/pull/93, POLIS support removed https://github.com/decred/atomicswap/pull/99
+* work started to add DNSSEC support to dcrseeder https://github.com/decred/dcrseeder/pull/19
+* [authit](https://github.com/decred/authit), the UI for dcrtime is now hosted at [timestamp.decred.org](https://timestamp.decred.org/). Feedback is welcome in [GitHub issues](https://github.com/decred/authit/issues) or in the new [#timestamp](https://matrix.to/#/!gltiHJRZiSJTzvjOEu:decred.org) chat room.
 
 > I must say, Go really is an amazing language. I don't think I have felt so comfortable in a new language so quickly. (@jholdstock in [chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15497080644503VtguR:decred.org))
 
@@ -125,6 +132,8 @@ Experimental Twitter account you can subscribe to for key Politeia activity http
 https://twitter.com/slices_of_pi
 
 https://medium.com/politeia-digest/issue-10-jan-1-feb-18-2018-202cde71a19d
+
+https://medium.com/politeia-digest/issue-11-feb-19-feb-28-2019-46befddb09fe
 
 ## Network
 
@@ -221,7 +230,8 @@ Selected articles:
 * https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/ commentary from @jy-p
 * https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/
 * https://www.placeholder.vc/blog/2019/2/19/cryptonetwork-governance-as-capital
-* https://www.investinblockchain.com/is-decred-dcr-building-decentralized-exchange/
+* https://www.investinblockchain.com/is-decred-dcr-building-decentralized-exchange/ by @richardred (also [in Chinese](https://0xzx.com/2019022708166553.html))
+* Decred evaluation by TokenGazer https://mp.weixin.qq.com/s/7rMaTYXIhIpO37qiIvJX_A , Decred was rated 4.2 _(missed in Jan issue)_
 
 Mentions {collapse}:
 
@@ -243,7 +253,7 @@ Audio:
 
 * {}
 
-## Community Discussions
+## Community
 
 Community stats:
 
@@ -261,6 +271,7 @@ Community stats:
 Comm systems news:
 
 * [Riot.im](https://riot.im/app/#/room/#general:decred.org) was [upgraded](https://medium.com/@RiotChat/the-big-1-0-68fa7c6050be) to version 1.0 with a reworked UI
+* non-English rooms were renamed to language used for consistency, unused rooms were removed. [#chinese](https://matrix.to/#/!nUWpVrwhlJFyLuMlGw:decred.org) is active. Several rooms await bridging.
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
