--- a/journal/201902.md
+++ b/journal/201902.md
@@ -2,96 +2,95 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month}
+{introduction, major news of the month
 
-{Happy Birthday Decred!}
+* Happy Birthday Decred! https://explorer.dcrdata.org/block/1
+* a lot of Pi activity
 
-https://explorer.dcrdata.org/block/1
+}
 
 {1.4 release reminder, verify binaries}
 
 ## Development
 
-{per-project summary, drop items without updates}
-
-{order of reporting: changes released > merged to master > started work > discussions and future plans}
-
 [dcrd](https://github.com/decred/dcrd):
 
-* {comment?} https://github.com/decred/dcrd/pull/1596 and https://github.com/decred/dcrd/pull/1597
-* wallet-specific types removed from dcrd https://github.com/decred/dcrd/pull/1607 and moved to dcrwallet https://github.com/decred/dcrwallet/pull/1394 {simplify changes to dcrwallet by not requiring accompanying changes to dcrd?}, this also triggered [refactoring](https://github.com/decred/dcrd/pull/1613) to simplify the dependency graph
+* mempool policy tightened by allowing [one less](https://github.com/decred/dcrd/pull/1596) double spend of a ticket and [rejecting](https://github.com/decred/dcrd/pull/1597) same block double spends
+* wallet-specific types [removed](https://github.com/decred/dcrd/pull/1607) from dcrd and [moved](https://github.com/decred/dcrwallet/pull/1394) to dcrwallet where they belong, this simplified changes to dcrwallet and also triggered [refactoring](https://github.com/decred/dcrd/pull/1613) in dcrd to provide stronger module boundaries and simplify the dependency graph _(note how the pull request cares for reviwers)_.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
-* v1 ticketbuyer removed https://github.com/decred/dcrwallet/pull/1396
+* v1 ticketbuyer was [removed](https://github.com/decred/dcrwallet/pull/1396) after being deprecated for several releases
 
 [Decrediton](https://github.com/decred/decrediton):
 
-* Upgraded to Electron 4 https://github.com/decred/decrediton/pull/2009
-* pipetx on win32, what does it fix? https://github.com/decred/decrediton/pull/2017
-* exit alert when ticketbuyer is running https://github.com/decred/decrediton/pull/1989
-* design phase for many responsive views is finished and ready for implementation https://github.com/decred/decrediton/issues?q=is%3Aissue+author%3AMariaPleshkova+created%3A2019-02-01..2019-02-28
+* [upgraded](https://github.com/decred/decrediton/pull/2009) to Electron 4 that allowed to make startup on Windows [more robust](https://github.com/decred/decrediton/pull/2017)
+* added [exit alert](https://github.com/decred/decrediton/pull/1989) when ticketbuyer is running
+* design phase for multiple [responsive views](https://github.com/decred/decrediton/issues?q=is%3Aissue+author%3AMariaPleshkova+created%3A2019-02-01..2019-02-28) is finished and ready for implementation
+* minor bug fixes
 
 [Politeia](https://github.com/decred/politeia):
 
 * Epic cache layer work was [merged](https://github.com/decred/politeia/pull/660)! Thanks @lukebp and all reviewers/testers. This paves the way for a lot of site performance improvements.
-* CLI tool improvements https://github.com/decred/politeia/pull/707
-* fsck (file system verification tool) for dcrtime https://github.com/decred/dcrtime/pull/46
-
-* Work started to scale www database using CockroachDB https://github.com/decred/politeia/pull/689
-
-A decision [was made](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$15507680085008gMbtf:decred.org) to move the code for contractor management system in politeia and politeiagui repositories to avoid the overhead of maintaining two codebase forks and keeping them in sync.
-
-[dcrandroid](https://github.com/decred/dcrandroid):
-
-* CN translation in progress https://github.com/decred/dcrandroid/issues/336
-* VN WIP https://github.com/decred/dcrandroid/pull/333
-* what other translations are completed/WIP?
-
-[dcrios](https://github.com/raedahgroup/dcrios):
-
-* "Lots of merges are happing right now to bring it up to par with android. Will have a new build up in about a week." https://github.com/raedahgroup/dcrios/projects/1
-
-Trezor: {}
-
-[dcrdata](https://github.com/decred/dcrdata):
-
-* exchange rate monitoring https://github.com/decred/dcrdata/pull/951
-* mempool page reworked https://github.com/decred/dcrdata/pull/982
-* endpoints to get raw blocks https://github.com/decred/dcrdata/pull/1032 and raw headers https://github.com/decred/dcrdata/pull/1035
-* added cache package https://github.com/decred/dcrdata/pull/1051
-* fiat conversions for supply, treasury and ticket price https://github.com/decred/dcrdata/pull/1049
+* email [notifications](https://github.com/decred/politeia/pull/680) after password change ([suggested](https://github.com/decred/politeia/issues/673) via bug bounty program) 
+* CLI tool [improvements](https://github.com/decred/politeia/pull/707)
+* [fsck](https://github.com/decred/dcrtime/pull/46) (file system verification tool) for dcrtime
+* bug fixes
 
 WIP:
 
-* present some data from Politeia https://github.com/decred/dcrdata/pull/1016
+* Work [started](https://github.com/decred/politeia/pull/689) to scale www database using CockroachDB.
+* A decision [was made](https://matrix.to/#/!VFRvyndKpzcLrVslQD:decred.org/$15507680085008gMbtf:decred.org) to move the code for contractor management system in politeia and politeiagui repositories to avoid the overhead of maintaining two codebase forks and keeping them in sync.
 
-Discussion started how to calculate cost of 51% attack on dcrdata https://github.com/decred/dcrdata/issues/1022
+[dcrandroid](https://github.com/decred/dcrandroid):
+
+* [Chinese](https://github.com/decred/dcrandroid/issues/336) and [Vietnamese](https://github.com/decred/dcrandroid/pull/333) translations are in progress 
+
+[dcrios](https://github.com/raedahgroup/dcrios): work ongoing to bring it up to par with Android, progress can be tracked on [this board](https://github.com/raedahgroup/dcrios/projects/1).
+
+[dcrdata](https://github.com/decred/dcrdata):
+
+* present data about [Politeia proposals](https://github.com/decred/dcrdata/pull/1016)
+* [fiat conversions](https://github.com/decred/dcrdata/pull/1049) for supply, treasury and ticket price
+* mempool page [rework](https://github.com/decred/dcrdata/pull/982)
+* endpoints to get [raw blocks](https://github.com/decred/dcrdata/pull/1032) and [raw headers](https://github.com/decred/dcrdata/pull/1035)
+* [cache](https://github.com/decred/dcrdata/pull/1051) package
+
+Discussion [started](https://github.com/decred/dcrdata/issues/1022) how to calculate cost of 51% attack on dcrdata.
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher):
 
-* Instructional video by @david that walks through the setup https://www.youtube.com/watch?v=9L8P7hL5v6w
-* @matheusd [shared](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1549497567273IPjZq:decred.org) his position, some background and plans on ticket splitting
+* @matheusd [shared](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1549497567273IPjZq:decred.org) his position, some background and plans for ticket splitting
+* Instructional [video](https://www.youtube.com/watch?v=9L8P7hL5v6w) by @david that walks through the setup 
 
-[docs](https://github.com/decred/dcrdocs): new page [Upgrading Decrediton](https://docs.decred.org/wallets/decrediton/upgrading-decrediton/).
+[docs](https://github.com/decred/dcrdocs):
+
+* new page explaining [Politeia Censorship](https://docs.decred.org/governance/politeia/politeia-censorship/) and how to prove you've been censored 
+* new page [Upgrading Decrediton](https://docs.decred.org/wallets/decrediton/upgrading-decrediton/)
+* list of testnet VSPs added to [Using Testnet](https://docs.decred.org/advanced/using-testnet/) page
+* P2PKH address generation flow diagram added to [Address Details](https://docs.decred.org/advanced/address-details/) page
+* the search [is back](https://github.com/decred/dcrdocs/pull/846)
+* smaller fixes and organizing
 
 [decred.org](https://github.com/decred/dcrweb):
 
-* News and Posts implementation started https://github.com/decred/dcrweb/issues/561
+* translations updated
+* minor fixes and updates
+* implementation of the News and Posts page [started](https://github.com/decred/dcrweb/issues/561)
 
 Other:
 
 * [voting.decred.org](https://voting.decred.org/) dashboard now shows past agendas too. jQuery was [removed](https://github.com/decred/hardforkdemo/pull/213) to the delight of those who understand.
 * Replacement of Google reCAPTCHA with self-hosted solution was [merged](https://github.com/decred/dcrstakepool/pull/281) - huge step in improving [stakeholder's privacy](https://github.com/xaur/decred-issues/issues/25). Thanks to all developers and testers of this patch.
 * Trivia: did you know that Decred heavily [discourages](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15497657664963CvzUr:decred.org) creation of dust outputs?
-* PoC UI for atomic swaps made a few steps https://github.com/xaur/decred-issues/issues/8
-* QTUM support merged to atomicswap https://github.com/decred/atomicswap/pull/93, POLIS support removed https://github.com/decred/atomicswap/pull/99
-* work started to add DNSSEC support to dcrseeder https://github.com/decred/dcrseeder/pull/19
+* [PoC UI](https://github.com/xaur/decred-issues/issues/8) for atomic swaps made a few steps.
+* QTUM support [merged](https://github.com/decred/atomicswap/pull/93) in atomicswap, POLIS support [removed](https://github.com/decred/atomicswap/pull/99)
+* Work [started](https://github.com/decred/dcrseeder/pull/19) to add DNSSEC support to dcrseeder.
 * [authit](https://github.com/decred/authit), the UI for dcrtime is now hosted at [timestamp.decred.org](https://timestamp.decred.org/). Feedback is welcome in [GitHub issues](https://github.com/decred/authit/issues) or in the new [#timestamp](https://matrix.to/#/!gltiHJRZiSJTzvjOEu:decred.org) chat room.
 
 > I must say, Go really is an amazing language. I don't think I have felt so comfortable in a new language so quickly. (@jholdstock in [chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15497080644503VtguR:decred.org))
 
-Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
+Dev activity stats for February: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
 ## People
 
@@ -100,6 +99,8 @@ Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {
 {welcome new individual and company contractors listed on decred.org, updates from existing}
 
 Ditto contractors https://github.com/decred/dcrweb/issues/562
+
+1 contributor [removed](https://github.com/decred/dcrweb/pull/541) from decred.org: @praxis
 
 {interviews about people}
 
@@ -168,7 +169,7 @@ Exchange integrations:
 * https://medium.com/lykke/lykke-exchange-lists-decred-cryptocurrency-1ae9e3cf9c6a
   * https://twitter.com/lykke/status/1095352586545319937
 * livecoin {keep?} https://twitter.com/livecoin_net/status/1098151449786118144
-* {chainrift}
+* {chainrift} https://www.chainrift.com/
 * BitMesh https://www.reddit.com/r/decred/comments/av8a69/bitmesh_has_launched_dcr_and_opened_dcrbtc/
 
 {OTC desks}
