Dev: dcrd feedback

--- a/journal/201902.md
+++ b/journal/201902.md
@@ -13,7 +13,7 @@
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): mempool policy tightened by allowing [one less](https://github.com/decred/dcrd/pull/1596) double spend of a ticket and [rejecting](https://github.com/decred/dcrd/pull/1597) same block double spends. Wallet-specific types [removed](https://github.com/decred/dcrd/pull/1607) from dcrd and [moved](https://github.com/decred/dcrwallet/pull/1394) to dcrwallet where they belong, this simplified changes to dcrwallet and also triggered [refactoring](https://github.com/decred/dcrd/pull/1613) in dcrd to provide stronger module boundaries and simplify the dependency graph _(note how the pull request cares for reviwers)_.
+[dcrd](https://github.com/decred/dcrd): mempool policy tightened by allowing [one less](https://github.com/decred/dcrd/pull/1596) double spend of a ticket and [rejecting](https://github.com/decred/dcrd/pull/1597) same block double spends. Wallet-specific types [removed](https://github.com/decred/dcrd/pull/1607) from dcrd and [moved](https://github.com/decred/dcrwallet/pull/1394) to dcrwallet where they belong, this simplified changes to dcrwallet and also triggered [refactoring](https://github.com/decred/dcrd/pull/1613) in dcrd to provide stronger module boundaries and simplify the dependency graph _(note how the pull request cares for reviwers)_. Non-root Go module replacements were [removed](https://github.com/decred/dcrd/pull/1599) - this helps to ensure that latest code from all modules is being tested, and to keep them independently accurate for external consumers.
 
 [dcrwallet](https://github.com/decred/dcrwallet): v1 ticketbuyer was [removed](https://github.com/decred/dcrwallet/pull/1396) after being deprecated for several releases.
 
