--- a/journal/201902.md
+++ b/journal/201902.md
@@ -253,25 +253,27 @@ In {month} DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate
 
 {PoW, ASIC resistance, tech}
 
-XMR ASIC nonce study:
 
-* https://www.reddit.com/r/Monero/comments/ao8mho/analysis_more_than_85_of_the_current_monero/
-* {summary please}
 
-Counterfeiting vulnerability was [discovered](https://z.cash/blog/zcash-counterfeiting-vulnerability-successfully-remediated/) in Zcash. "This vulnerability is so subtle that it evaded years of analysis by expert cryptographers focused on zero-knowledge proving systems and zk-SNARKs.". It was silently patched with the Sapling network upgrade that occurred on Oct 28, 2018.
+A [study](https://medium.com/@MoneroCrusher/analysis-more-than-85-of-the-current-monero-hashrate-is-asics-and-each-machine-is-doing-128-kh-s-f39e3dca7d78) of Monero nonces documented differing patterns in the nonce distribution when ASICs were mining on the network, it considers the methods ASIC miners may take to disguise their presence and how they can be detected. The study speculates that 85% of the Monero hashrate comes from ASICs at time of writing.
 
-{governance, funding, forks, chain splits, controversy}
+A counterfeiting vulnerability was [discovered](https://z.cash/blog/zcash-counterfeiting-vulnerability-successfully-remediated/) in Zcash in early 2018. "This vulnerability is so subtle that it evaded years of analysis by expert cryptographers focused on zero-knowledge proving systems and zk-SNARKs.". It was silently patched with the Sapling network upgrade that occurred on Oct 28, 2018, and this [post](https://z.cash/blog/zcash-counterfeiting-vulnerability-successfully-remediated/) on Feb 5 explained how the vulnerability had been dealt with within Zcash and how other affected coins (like Horizen and Komodo) were notified. The nature of Zcash cryptography is such that it is difficult to determine if any ZEC was counterfeited while the vulnerability was present, the Zcash team reporting on the bug believe it had not been exploited because “discovery of the vulnerability would have required a high level of technical and cryptographic sophistication that very few people possess.”
 
-Grin developer published his [disappointments](https://www.grin-forum.org/t/solved-early-disappointments/3682) about the innovative project being unable to attract modest funding. After the news spread, the [campaign](https://grin-tech.org/yeastplume) quickly raised EUR 67,580 out of EUR 55,000 target. This is interesting in context of another investment. As Breaker Mag [noted](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/), Grin "attracted [tens of millions of dollars](https://www.coindesk.com/grin-launch-crypto-interest-from-deep-pocketed-investors) in mining investment, but had some trouble raising a mere $62,000 to pay its lead developer for six months."
+A Grin developer published a forum [post](https://www.grin-forum.org/t/solved-early-disappointments/3682) expressing disappointment that a request for donations to fund one of the developers had not been filled after two weeks of the network being online - and threatening to take 20% of the block rewards to fund development. After the news spread, the [campaign](https://grin-tech.org/yeastplume) quickly raised EUR 67,580, surpassing the EUR 55,000 target. As Breaker Mag [noted](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/), Grin "attracted [tens of millions of dollars](https://www.coindesk.com/grin-launch-crypto-interest-from-deep-pocketed-investors) in mining investment, but had some trouble raising a mere $62,000 to pay its lead developer for six months."
 
-Ethereum holders are [signaling](http://www.progpowcarbonvote.com/) whether they want to change mining algorithm to ProgPoW. The vote started with strong [opposition](https://www.trustnodes.com/2019/02/14/98-of-ethereum-vote-against-progpow) of the change (98% No), but later flipped to strong support (85% Yes). The vote is not binding. Participation is 1.1% of coin supply as of Feb 16 {update}.
+Ethereum holders are holding another [signaling carbonvote](http://www.progpowcarbonvote.com/) about whether they want to change mining algorithm to ProgPoW. The vote started with strong [opposition](https://www.trustnodes.com/2019/02/14/98-of-ethereum-vote-against-progpow) to the change (98% No), but later flipped to strong support (94% Yes) as of 4 March (with 3% of circulating ETH having voted). While carbonvote has no official place in Ethereum's governance, the method is being used because:
 
-Tezos first protocol amendment, Kialo {summary}.
+> We have noticed a lot of trolling and shills on both sides of the debates from anonymous accounts on forums, youtube, telegram, glitter, reddit and twitter. There is no way to know if these accounts are real people who actually have economic stakes in ethereum, or are simply fake troll or shill accounts funded by one side of the debate.
 
-* https://medium.com/tezos-spotlight/tezos-the-first-amendment-a-laymans-guide-7424ef1d3e13
-* https://www.kialo.com/tezos-protocol-amendment-1-25295
+Tezos started [voting](https://blog.nomadic-labs.com/athens-proposals-injected.html) for the first [amendment](https://blog.nomadic-labs.com/athens-our-proposals-for-the-first-voted-amendment.html) to its protocol on February 25 ([simple guide](https://medium.com/tezos-spotlight/tezos-the-first-amendment-a-laymans-guide-7424ef1d3e13), [detailed guide](https://medium.com/tezos/amending-tezos-b77949d97e1e) to amendment process). The amendment process has 4 phases, each lasting 8 "cycles" (a cycle lasts around 3 days, so each phase lasts for around 24 days). In the first phase bakers submit and upvote proposals. There are 2 proposals being evaluated now in the first phase, they both increase the gas limit but one also decreases the minimum "roll size" (amount of XTZ required to be a baker). It is interesting to note that Kialo is being [used](https://www.kialo.com/tezos-protocol-amendment-1-25295) by some Tezos community members to discuss these proposals. When the first phase ends, the most upvoted proposal will progress to phase 2, where it must be approved by at least 80% of bakers. If the criteria are met, this is followed by a testing phase in which a testnet fork with the changes applied is created and runs for 48 hours (a further testnet matching the proposal may be run for the rest of this phase to allow further testing). After the testing phase, bakers vote on whether the changes should be activated, with an 80% supermajority required. After this 4th phase the changes are activated (or not) and the cycle begins again with new proposals.
 
-{Dash 0.13 upgrade signaling}
+Dash v0.13.1 was released on Feb 8 to "accelerate adoption of the Dash Core v0.13". Dash Core [v0.13](https://blog.dash.org/dash-core-v0-13-on-mainnet-dc9609b0f6f9) was intended to activate [DIP3](https://github.com/dashpay/dips/blob/master/dip-0003.md) but it had an activation threshold of 80% blocks signalling support from the PoW miners and masternodes in a 7 day window before activation would begin. After failing to meet these criteria for around 24 days, it was decided that the criteria are too stringent and that the requirement for masternodes to signal could be dropped. When enough PoW miners adopt v0.13.1 the change would activate one week later (it [activated](https://blog.dash.org/product-update-february-21-2019-5f067b62df00) around Feb 26).
+
+0x protocol (ZRX) held its [first](https://blog.0xproject.com/how-to-participate-in-the-zeip-23-vote-eaa861298033) token holder vote from February 18 - February 25. The vote was to approve [ZEIP-23](https://blog.0xproject.com/zeip-23-trade-bundles-of-assets-fe69eb3ed960) and enable "trade bundles of assets". The proposal was [approved](https://0x.org/vote) with 99% Yes votes by 5,061,033 ZRX (0.86% of the circulating supply).
+
+The NEM Foundation's funding proposal [started](https://forum.nem.io/t/nem-foundation-update-vote-for-funding-proposal-2019/22007) voting on Feb 15 and voting was open for 5 days. The funding proposal [passed](https://forum.nem.io/t/vote-for-nem-foundation-funding-proposal-2019-approved-by-the-community/22060) with 90% Yes votes and 10% No votes - with votes from 4.56% of the "Proof of Importance" (NEM's way of weighting holders' influence). The vote was conducted on the basis that a 65% supermajority of Yes votes was required, and at least 3% of the network's POI must vote Yes as a quorum requirement. Voting was conducted from within the NEM wallet by sending 0 XEM transactions to a Yes or No address. Another concurrent proposal to fund "NEM Labs" was also successful, with a similar level of participation and 98.8% approval. The NEM Foundation proposal asked for $8 million in XEM (figure is surprisingly hard to find, could only be found in a [google doc presentation](https://docs.google.com/presentation/d/1nMR_1ajVcpdGW7g8I0p7ZGh88tZ1SL5RzG5TsLW6Qnk/edit#slide=id.p2)), while the NEM Labs proposal asked for $3.27 million.
+
+The Aragon Transparency Report for Q4 2018 was [released](https://blog.aragon.org/aragon-q4-2018-transparency-report/). This report presents a detailed breakdown of spending related to the project. The total spent in Q4 2018 was ~€1,055,484.43 or equivalent in cryptocurrency, with €268k on salaries, €330k on payments to service providers, €45k on sponsoring/tickets for events, €63k on hosting the AraCon conference and €260k on [Nest](https://github.com/aragon/nest) teams (a grants program). This report also describes financial [hedging](https://twitter.com/AragonProject/status/1067349802365739008) steps which have been taken by Aragon Association - exchanging some of the ETH raised during the ICO to buy other assets.
 
 {DEX}
 
