--- a/journal/201902.md
+++ b/journal/201902.md
@@ -128,19 +128,11 @@ Warning: the authors of Decred Journal have no idea about which of the above are
 
 ## Adoption
 
-New merchants:
+CoinFund [announced](https://blog.coinfund.io/announcing-grassfed-network-and-decred-staking-pool-with-placeholder-55a32a312710) Grassfed Network, an initiative that uses 'generalized mining' to directly participate in decentralized network. The story was featured in [CoinDesk](https://www.coindesk.com/these-cryptofunds-say-generalized-mining-is-the-new-way-to-invest).
 
-* {}
+Any activity that is compensated with on-protocol rewards denominated in network assets can be seen as [generalized mining](https://grassfed.network/mining/). Following this approach investors can directly engage in the networks and generate additional returns, compared to just speculating on the value of cryptoassets.
 
-{applications of Decred blockchain and related projects: Politeia, atomicswap}
-
-{investment adoption}
-
-GrassFed, CoinFund:
-
-* https://www.coindesk.com/these-cryptofunds-say-generalized-mining-is-the-new-way-to-invest
-* https://blog.coinfund.io/announcing-grassfed-network-and-decred-staking-pool-with-placeholder-55a32a312710
-* {Adoption or Integrations?}
+Per the announcement, CoinFund partnered with [Placeholder](https://www.placeholder.vc/) who plans to delegate its own voting tickets to the [Decred VSP](https://dcr.grassfed.network) launched in January. This plan was voiced earlier by Joel Monegro and Chris Burniski during the [panel](https://www.youtube.com/watch?v=tkllaH0Y0ng) at Texas Bitcoin Conference 2018. [CoinFund](https://coinfund.io/) is a cryptoasset-focused investment and research firm founded in 2015 and based in New York, USA.
 
 ## Outreach
 
