--- a/journal/201902.md
+++ b/journal/201902.md
@@ -136,13 +136,19 @@ Per the announcement, CoinFund partnered with [Placeholder](https://www.placehol
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+February update from Ditto:
 
-Big discussion about whether to use word "bug" in public messaging for 1.4 release.
+* Media trained 5 Decred community members.
+* Secured media coverage: 15-minute [interview](https://blocktv.com/watch/2019-02-20/5c6d6a2be03e3-chain-breakers-promoting-constant-disruption-) between @jy-p and BlockTV, a feature [article](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/) for the DEX proposal in Forbes, a feature [article](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/) in honor of Decred's 3rd anniversary in Beaker Mag, an [article](https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/) on the Vertbase listing in The Block Crypto featuring quotes by @jz. The journalist, Frank Chaparro, said the story was very popular on Twitter and also internally at The Block
+* Facilitated 2 interviews with crypto media outlets.
+* Worked with the community to create a repository of media-friendly images that we can share with reporters to add visuals to stories about Decred.
+* Helped plan the logistics and content for the event hosted by Decred and OKCoin in San Francisco. Worked with Dustin and OKCoin to draft the Eventbrite copy, coordinate with OKCoin, develop the agenda for the event, and draft a press release.
+* Put together a plan to position Decred as a superior store of value among a variety of channels, including initiating long-term conversations with select top tier mainstream reporters.
+* Worked with Dustin on a master six-month marketing and communications plan spanning PR, events, content, etc. As part of this strategy, we aim to build Decred's legitimacy and credibility among institutional investors. That entails thinking beyond media relations to span other disciplines as well: owned content, Twitter, influencers, events, etc.
 
-Biweekly Feb 4 https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154930816328395IaXDr:decred.org
+For more detail see Ditto's biweekly updates on [Feb 4](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154930816328395IaXDr:decred.org) and [Feb 15](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155026927613161McEtC:decred.org).
 
-Biweekly Feb 15 https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155026927613161McEtC:decred.org
+Long [discussion](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$15498862365982zjzwP:decred.org) about perception and framing was triggered by a question whether to use word "bug" in public messaging for 1.4 release.
 
 ## Events
 
