--- a/journal/201902.md
+++ b/journal/201902.md
@@ -154,13 +154,22 @@ Long [discussion](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$1549886236
 
 Attended:
 
-* {}
+* [TabConf](https://tabconf.com/) in Atlanta, USA. @joshuam [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15497319564677Cmutw:decred.org): "Tabconf was awesome. Extremely engaged audience - best questions I have received at a conference to date".
+* [Campus Party](http://brasil.campus-party.org/cpbr12/patrocinadores/) in Sao Paulo, Brazil. About 60,000 people passed through the event which was running 24 hours a day for 6 days. Decred was the only cryptocurrency participating officially and with an exclusive space to present lectures and classes. All Brazilian contractors attended and presented a total of 6 talks and 3 workshops. @jy-p presented [{title}](https://www.youtube.com/watch?v=JFC3AiFKXVc) and @fernandoabolafio talked about [Politeia Architecture](https://www.youtube.com/watch?v=RmHmnh8RYkI). There were a few problems like Decred's zone moved and reduced (happened to almost all participants) and poor organization of translations - all taken into account for future planning. See [full report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155197422519492anwor:decred.org) by @emiliomann and [notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155197226472913itWWu:matrix.org) by @matheusd.
+* Love Night in Ghana. Organized by @George Pro. Since about 90% of participants knew about Bitcoin, presenters could skip the basics and highlight unique features of Decred. One popular question was where DCR can be exchanged to local currency. ([photos](https://twitter.com/deCRED_Ghana/status/1096714039978266624))
+* [How To Keep Your Crypto Secure](https://www.meetup.com/Decred-Australia/events/258211699/) in Melbourne, Australia. Australia's cryptocurrency enthusiasts discussed best security practices and Decred's security standards. @Zohand [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15504942691141LtOxa:decred.org): "Feedback was awesome, and the guys from coinstop and CTRL want to run the event again in a couple of months.". ([photos](https://twitter.com/DecredAustralia/status/1097478053763018752))
+* [Decred in 30 minutes](https://www.eventbrite.com/e/decred-en-30-minutos-tickets-55764142050) in Mexico City, Mexico. @elian [reported](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15517155592047249xtYGy:matrix.org): "It was the first meetup where everyone knew about Decred quite well, we were 7 in total. The presentation went faster because attendees knew most of the fundamental content in advance so we went to discuss more complex issues like what are the challenges to decentralized governance, best way to stake tickets and future developments that are happening in the project like LN, payments integration and the most recent events, marketing and community proposals in Politeia. Was very nice to meet proper DCR enthusiasts in Mexico. (...) I think we are far from seeing cc as MoE in Mexico but definitely the space is moving fast. At the moment there are more Mexicans in contact with crypto than with the stocks markets in the country, this is a very good indicator.". ([photos](https://twitter.com/DecredESP/status/1102594478664232960))
+* [Decred Meetup](https://www.eventbrite.com/e/decred-meet-up-tickets-57073786231) in Winneba, Ghana. Organized by @George Pro, who [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org): "Our first meetup in Ghana was successful. We took our time to explain to the participants how to stake DCR, how to get DCR (Coinomi process), using it as remittances, wallet set up, speed and privacy among others.". ([photos](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155133397211500yxtpJ:decred.org))
+* Talk at Qingdao University in Qingdao, China. [@wanbihou](https://twitter.com/wanbihou) talked about Decred's community governance model and the upcoming on-chain consensus vote. "The students were very enthusiastic!". ([photos](https://twitter.com/wanbihou/status/1101131545010556928))
 
 Upcoming:
 
-* https://www.meetup.com/San-Francisco-Decred-Meetup/
+* [Decred & OKCoin Present "The Next 10 Years: Crypto Boom, Bust, or Buidl?"](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco, USA on Mar 12.
+* [Restoring Trust through Blockchain Governance](https://www.meetup.com/DecredCanada/events/259126224/) in Toronto, Canada on Mar 16.
+* [Berlin Blockchain Week](https://www.berlin-blockchain-week.com/) in Berlin, Germany on Mar 27. @karamble will be speaking.
+* [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Contact @elian for details.
 
-{announcements from events people}
+As noted in Governance above, stakeholders approved a $200K budget for [2019 events](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509), which includes 3 large scale events and ~20 smaller events.
 
 ## Media
 
