--- a/journal/201902.md
+++ b/journal/201902.md
@@ -97,12 +97,12 @@ Proposal status as of {}:
 
 * [Baeond card game](https://proposals.decred.org/proposals/f545b359fcf1b40b356e9cb556cb422cc7ff01b628b577f804cdc45ce414f5dd) by burst was rejected by 97% No votes of 29% participated tickets _(missed in Jan issue)_.
 * [Decentralized exchange RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) by @jy-p received 70 comments and a 2nd edition that reduced the scope of the MVP and capped the cost at $250K (down from $1M). @bee published a personal pros-cons [analysis](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md). The proposal also spurred a [discussion](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) about whether the Treasury should fund promotion of proposals like this.
-* [Wallet tutorials](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) by Denni Lovejoy of Cryptocurrency.Market was published after multiple iterations and feedback collection in [chats](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). The budget of $750 was approved with {}% Yes votes and participation of {}% tickets.
-* [Events funding for 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) by @Dustorf was submitted after previews in [chat](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/). Voting finished with the approval of a $200K budget by {}% Yes votes from {}% tickets.
-* [Marketing funding for 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal by @Dustorf was extensively discussed in 68 comments, in addition to [chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) rounds preceding the proposal. The budget of $290K was approved by {}% Yes votes cast by {}% tickets.
+* [Wallet tutorials](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) by Denni Lovejoy of Cryptocurrency.Market was published after multiple iterations and feedback collection in [chats](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). The budget of $750 was approved with 80% Yes votes and participation of 24% tickets.
+* [Events funding for 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) by @Dustorf was submitted after previews in [chat](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/). Voting finished with the approval of a $200K budget by 89% Yes votes with 34% tickets voting.
+* [Marketing funding for 2019](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) proposal by @Dustorf was extensively discussed in 68 comments, in addition to [chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154897255124536mFHoo:decred.org) and [Reddit](https://www.reddit.com/r/decred/comments/aolr79/politeia_proposal_to_fund_marketing_ops_for_2019/) rounds preceding the proposal. The budget of $290K was approved by 83% Yes votes with 36% of tickets voting.
 * [Decred ATM integration](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) proposal by @oregonisaac is a result of many weeks of research, drafts and feedback since the discussion of Bcash ATM [proposal](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) in Nov 2018. Current proposal asks stakeholder opinion whether to proceed with planning. If approved, another proposal will be submitted with particular details of implementation.
-* [Decred community website](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) by @karamble proposes a website that aggregates multiple sources of Decred-related content like articles, videos, podcasts, event reports and merchants. The prototype was already built by @karamble and the proposal seeks $6K to fund the site for 6 months.
-* [Decred integration for IDAX exchange](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) by acean seeks 1,000 DCR to add DCR/BTC trading pair to the IDAX exchange based in Mongolia. Voting started.
+* [Decred community website](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) by @karamble proposes a website that aggregates multiple sources of Decred-related content like articles, videos, podcasts, event reports and merchants. The prototype was already built by @karamble and the proposal seeks $6K to fund the site for 6 months. Voting finished with approval of 72.5% Yes votes, with votes by 33% of eligible tickets.
+* [Decred integration for IDAX exchange](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) by acean seeks 1,000 DCR to add DCR/BTC trading pair to the IDAX exchange based in Mongolia. Voting started. This proposal was rejected with 25% Yes votes, with 23.5% of tickets voting.
 
 Discussion started to amend Decred Constitution and ratify the new version with a Politeia vote. The initial goal was to remove outdated/irrelevant parts and add missing parts with minimum changes. During the discussion several people asked if we need constitution at all, considering that it is not binding. Links to all discussions and proposed changes are collected in [this issue](https://github.com/xaur/decred-issues/issues/107).
 
